# clover-platform

./: .dockerignore  .env.example  .env.external-postgres.example  .gitignore  .venv  README.md  requirements-dev.txt
alembic/: env.py
config/: apps.yaml  default.yaml  (+2 more)
legacy/bid-generator/dify-bridge/: README.md  pyproject.toml
legacy/bid-generator/dify-bridge/dify-workflows/: ProEngine_Content_Rewrite.yml  ProEngine_Content_Writer.yml  ProEngine_Diagram_Generator.yml  ProEngine_Diagram_Generator_Mermaid.yml  ProEngine_DocAnalysis.yml  ProEngine_Structure_Generate.yml  README.md
legacy/bid-generator/dify-bridge/src/: __init__.py  client.py  config.py  knowledge.py  workflow.py
legacy/bid-generator/dify-bridge/tests/: __init__.py
legacy/bid-generator/gateway-in/: README.md  pyproject.toml
legacy/bid-generator/gateway-in/src/: __init__.py  config.py  main.py
legacy/bid-generator/gateway-in/src/extractors/: __init__.py  bid_extractor.py  template.py
legacy/bid-generator/gateway-in/src/parsers/: __init__.py  base.py  document_tree.py  docx_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py
legacy/bid-generator/gateway-in/src/security/: __init__.py  image_stripper.py  pipt_client.py  tier_classifier.py
legacy/bid-generator/gateway-in/tests/: __init__.py
legacy/bid-generator/gateway-out/: README.md  pyproject.toml
legacy/bid-generator/gateway-out/src/: __init__.py  forge.py  main.py
legacy/bid-generator/gateway-out/src/converter/: __init__.py  styles.py
legacy/bid-generator/gateway-out/templates/: official_template_cn.docx
legacy/bid-generator/gateway-out/tests/: __init__.py
legacy/bid-generator/pipt-flask/: .env.example  .flaskenv  .gitignore  README.md  create_img_docx.py  docker-compose.yml  main_lite.py  pyproject.toml  requirements-dev.txt  requirements-lite.txt  requirements-prod.txt  test.py  test2.py  test_db.py  test_docx.py  test_parse_dify.py  test_parse_dify2.py  test_pdf.py  test_pdf2.py  test_pdf3.py  test_pdf4.py  test_pdf5.py  test_pdf6.py
legacy/bid-generator/pipt-flask/app/: __init__.py
legacy/bid-generator/pipt-flask/app/api/piptool/: mask_job.py  rule_risk.py  system_log.py  system_usage.py  user_config.py
legacy/bid-generator/pipt-flask/app/api_lite/: __init__.py  attachment_templates.py  bidder_pipt.py  content_placeholder_resolve.py  database.py  docanalysis_protocol.py  engine.py  outline_word_normalize.py  project_routes.py  recognition_rules.py  routes.py  schemas.py  task_manager.py  task_routes.py  writing_hint_builder.py
legacy/bid-generator/pipt-flask/app/config/: base.py  code_message.py  config.yaml  development.py  production.py
legacy/bid-generator/pipt-flask/app/extension/celery_task/: __init__.py  celery_init.py  global_model.py  tasks.py
legacy/bid-generator/pipt-flask/app/extension/celery_task/pipt_task/: mdt_config.yaml  requirements.txt
legacy/bid-generator/pipt-flask/app/extension/celery_task/pipt_task/classification/: bert_classificaiton.py  judge.py
legacy/bid-generator/pipt-flask/app/extension/celery_task/pipt_task/desensitize/: ReadMe.md  mask_desensitize.py  simple_anonymization.py
legacy/bid-generator/pipt-flask/app/extension/celery_task/pipt_task/per_info_iden/: __init__.py  field_identify.py  identify_model.py  result_handle.py  table_identify.py
legacy/bid-generator/pipt-flask/app/util/: api.py  celery_operation.py  encrypt_decrypt.py  mysql_operation.py  status_code.py  tool.py
legacy/bid-generator/pipt-flask/config/: analysis_framework.json
legacy/bid-generator/prompt-forge/: README.md  pyproject.toml
legacy/bid-generator/prompt-forge/src/: __init__.py  auditor.py  builder.py  optimizer.py
legacy/bid-generator/prompt-forge/tests/: __init__.py
(+822 files in other folders)
