[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway-out"
version = "0.1.0"
description = "ProEngine 出口网关 — 占位符复原与 Markdown→Word 转换"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "docxcompose>=1.4.0",
    "markdown>=3.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]
